--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -1,7 +1,7 @@
 
 # 详解前向计算、反向传播
 
-#### **开始了解概念之前，咱们先通过”[Tensorflow Playground](http://playground.tensorflow.org/)“，来可视化的体验一下简单神经网络的训练过程。**
+#### **开始了解概念之前，咱们先通过”[Tensorflow Playground](http://playground.tensorflow.org/)“，来可视化的体验一下mlp的训练过程。**
 
 ## 概念介绍
 
