--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -391,8 +391,8 @@ dB1=dZ1 \tag{12}
 刚才讲的只是Sigmoid函数、线性回归损失函数的梯度，其他的激活函数、损失函数各自都有自己的梯度，但反向传播的过程都是一样的。
 
 
-这里要明确一点，就像分子构成细胞，细胞构成组织、器官一样，刚才讲解的这个案例，充其量只能类比为最简单的细胞，仅用来说明深度学习（神经网络）工作的基本原理。
-现代的神经网络模型，就是在分子（"前向计算"、“反向传播”……）的基础上，构成了多种多样的细胞（CNN、RNN、ResNet、R-CNN……），进而构成了各种组织、器官（GAN、UNet、YOLO、Transformer Encoder、Transformer Decoder……），最终构成了形态各异的生物（Bert、GPT、DETR、MAE、CLIP、DALL·E……）。
+> 这里要明确一点，就像分子构成细胞，细胞构成组织、器官一样，刚才讲解的这个案例，充其量只能类比为最简单的细胞，仅用来说明深度学习（神经网络）工作的基本原理。
+> 现代的神经网络模型，就是在分子（"前向计算"、“反向传播”……）的基础上，构成了多种多样的细胞（CNN、RNN、ResNet、R-CNN……），进而构成了各种组织、器官（GAN、UNet、YOLO、Transformer Encoder、Transformer Decoder……），最终构成了形态各异的生物（Bert、GPT、DETR、MAE、CLIP、DALL·E……）。
 
 ## **观察与思考**
 接下来，我再蹭一下风头正劲的LLM（大语言模型）的热度。
