--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -392,7 +392,7 @@ dB1=dZ1 \tag{12}
 
 
 > 这里要明确一点，就像分子构成细胞，细胞构成组织、器官一样，刚才讲解的这个案例，充其量只能类比为最简单的细胞，仅用来说明深度学习（神经网络）工作的基本原理。
-> 现代的神经网络模型，就是在分子（"前向计算"、“反向传播”……）的基础上，构成了多种多样的细胞（CNN、RNN、ResNet、R-CNN……），进而构成了各种组织、器官（GAN、UNet、YOLO、Transformer Encoder、Transformer Decoder……），最终构成了形态各异的生物（Bert、GPT、DETR、MAE、CLIP、DALL·E……）。
+> 现代的神经网络模型，就是在分子（"前向计算"、“反向传播”……）的基础上，构成了多种多样的细胞（MLP、CNN、RNN、ResNet、R-CNN……），进而构成了各种组织、器官（GAN、UNet、YOLO、Transformer Encoder、Transformer Decoder……），最终构成了形态各异的生物（Bert、GPT、DETR、MAE、CLIP、DALL·E……）。
 
 ## **观察与思考**
 接下来，我再蹭一下风头正劲的LLM（大语言模型）的热度。
