--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -396,10 +396,10 @@ dB1=dZ1 \tag{12}
 
 ## **观察与思考**
 接下来，我再蹭一下风头正劲的LLM（大语言模型）的热度。
-就在上个月，OpenAI发布了GPT-4。
-正如[GPT-4的论文](https://arxiv.org/pdf/2303.08774.pdf)（技术报告）中提到的，GPT-4已经可以通过律师资格证考试，而且还超过了90%的考生，刷榜了大多数偏文科考试。
-还有人用GPT-4测试，通过了Google、微软等各大公司的面试。
-GPT-4还能帮人做游戏、3D建模、做投资等等，总之就是强的令人发指！
+<br />就在上个月，OpenAI发布了GPT-4。
+<br />正如[GPT-4的论文](https://arxiv.org/pdf/2303.08774.pdf)（技术报告）中提到的，GPT-4已经可以通过律师资格证考试，而且还超过了90%的考生，刷榜了大多数偏文科考试。
+<br />还有人用GPT-4测试，通过了Google、微软等各大公司的面试。
+<br />GPT-4还能帮人做游戏、3D建模、做投资等等，总之就是强的令人发指！
 
 
 紧接着，OpenAI又发布了一个[LLM会对劳动力市场有哪些影响的报告](https://arxiv.org/pdf/2303.10130.pdf)。
