--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -9,7 +9,7 @@
 
 
 神经网络之所以能工作，靠的就是“**前向计算**”、“**梯度下降**和**反向传播**”。而我们在学习这部分知识时，却总是发现相关内容往往充斥着各种数学公式，具体的推导过程又往往语焉不详，经常看的人云里雾里的不知所云。
-今天咱们就通过一个例子，来详解一下神经网络在“**前向计算**”、“**梯度下降**和**反向传播**”时都做了些什么。
+<br />今天咱们就通过一个例子，来详解一下神经网络在“**前向计算**”、“**梯度下降**和**反向传播**”时都做了些什么。
 
 
 #### **梯度下降**
@@ -403,51 +403,50 @@ dB1=dZ1 \tag{12}
 
 
 紧接着，OpenAI又发布了一个[LLM会对劳动力市场有哪些影响的报告](https://arxiv.org/pdf/2303.10130.pdf)。
-文中指出，80%的美国劳动力平时工作中有10%的任务，会受到LLM的影响。另有19%的劳动力，他们50%的工作会受到LLM的影响。
-高学历的人、更高门槛的工作、更高收入的工作往往更容易被AI所取代。不过文章同时也指出，那些需要科研能力和批判思维能力的工作暴露率（高风险率）较低。
-专家和模型各选了一批受影响最严重的职业，其中包括：数学家、报税员、量化金融分析师、作家、网络和数字界面设计师，还包括新闻记者、法务、行政、通讯员、区块链工程师、翻译、公关专家、调研员等职业。
-影响最小的职业，都是那些体力工作者：农机操作员、运动员、食品服务业、林业和伐木业、社会救助和食品制造业……
-职业类型之外，研究团队也按照行业分析了LLM的影响。结果显示，包括数据处理托管、出版行业和安全商品合约在内的行业，最可能被颠覆。
+<br />文中指出，80%的美国劳动力平时工作中有10%的任务，会受到LLM的影响。另有19%的劳动力，他们50%的工作会受到LLM的影响。
+<br />高学历的人、更高门槛的工作、更高收入的工作往往更容易被AI所取代。不过文章同时也指出，那些需要科研能力和批判思维能力的工作暴露率（高风险率）较低。
+<br />专家和模型各选了一批受影响最严重的职业，其中包括：数学家、报税员、量化金融分析师、作家、网络和数字界面设计师，还包括新闻记者、法务、行政、通讯员、区块链工程师、翻译、公关专家、调研员等职业。
+<br />影响最小的职业，都是那些体力工作者：农机操作员、运动员、食品服务业、林业和伐木业、社会救助和食品制造业……
+<br />职业类型之外，研究团队也按照行业分析了LLM的影响。结果显示，包括数据处理托管、出版行业和安全商品合约在内的行业，最可能被颠覆。
 
 > 所谓“暴露率”，其判断标准是通过访问GPT或GPT驱动的系统是否会使人类执行一项任务所需的时间减少50%以上。“虽然暴露并不一定表明他们的工作任务可以通过GPT技术完全自动化，但它们将帮助这些人节省大量完成任务的时间。”
 
 
 其实，就我个人对这些LLM或LLM提供能力的工具（微软的Copilot、GitHub的Copilot），也有一些观察与思考。
-目前LLM能提供的能力，往往体现在拉高了所有人能力阈值的方面。
-即在某些非专长的工作中，一个专业技能不足的人也可以通过LLM的协助，比较漂亮的完成一些难度有限的工作。
-而对于一个资深的专业人士来说，使用LLM获得的专业能力提升就比较有限了——LLM往往就只能帮助解决一些技术含量较低、重复性较高的工作了。
+<br />目前LLM能提供的能力，往往体现在拉高了所有人能力阈值的方面。
+<br />即在某些非专长的工作中，一个专业技能不足的人也可以通过LLM的协助，比较漂亮的完成一些难度有限的工作。
+<br />而对于一个资深的专业人士来说，使用LLM获得的专业能力提升就比较有限了——LLM往往就只能帮助解决一些技术含量较低、重复性较高的工作了。
 
 所以，对现阶段的LLM既没必要过度恐慌，也不能盲目轻视。
-不恐慌：从专业领域来看，LLM目前还只能解决一些痒点的问题。
-不轻视：但是随着不断地迭代，LLM迟早有一天会变成一个真正多模态的AGI，成为一个有能力解决痛点问题的存在。
+<br />不恐慌：从专业领域来看，LLM目前还只能解决一些痒点的问题。
+<br />不轻视：但是随着不断地迭代，LLM迟早有一天会变成一个真正多模态的AGI，成为一个有能力解决痛点问题的存在。
 
 最近，MetaAI发布的Toolformer模型已经可以利用工具了，可以去调用各种各样(日历、浏览器、计算器……)的API。
-OpenAI也迅速跟进推出了ChatGPT plugin，来连接成百上千的API。这就让大语言模型变成了一个交互的入口，整合起了已有的各种工具以及互联网，不仅提升了大语言模型的各种能力，还能通过互联网及时的更新模型的知识库，从而开启了无限的可能。
+<br />OpenAI也迅速跟进推出了ChatGPT plugin，来连接成百上千的API。这就让大语言模型变成了一个交互的入口，整合起了已有的各种工具以及互联网，不仅提升了大语言模型的各种能力，还能通过互联网及时的更新模型的知识库，从而开启了无限的可能。
 
 #### **说点闲话**
 就我们个人来说，其实没别的选择——打不过就加入，紧跟未来的科技发展方向，拥抱AI。
 
 这个拥抱AI，既可以理解为从事AI相关技术的研究、工业落地等工作；也可以理解为将AI作为一个黑盒，对其的交互方式进行研究、使用。
-总之，就是不要离AI太远。
+<br />总之，就是不要离AI太远。
 
 有鉴于现在LLM的使也有一定的门槛，我这里就通过几个例子，来简单的给大家介绍一下。
 
 1. 研究社区中有人提出了“Large Language Models are Zero-Shot Reasoners“，指出只需要在LLM给出答复之前，增加一句“Let's think step by step”，就很能立刻让模型在两个比较难的数学问题数据集上大比例涨点！
 <img src="https://github.com/KnightLancelot/Dissemination-of-NN/blob/main/files/step_by_step0.png?raw=true" />
-研究人员进而还提出了“Chain of Thought”(CoT)理论、“AI求鼓励”的观点，更是写出了大量与此相关的论文。
 <img src="https://github.com/KnightLancelot/Dissemination-of-NN/blob/main/files/step_by_step1.png?raw=true" />
+研究人员进而还提出了“Chain of Thought”(CoT)理论、“AI求鼓励”的观点，更是写出了大量与此相关的论文。
 
 2. 还是研究社区中最先有人发现，可以通过给ChatGPT“催眠”来突破模型的限制。
 <img src="https://github.com/KnightLancelot/Dissemination-of-NN/blob/main/files/DAN%E7%AA%81%E7%A0%B4ChatGPT%E7%9A%84%E9%99%90%E5%88%B6.png?raw=true"/>
-
 之后OpenAI才开始跟进，在GPT-4中提供了一个新的特性“[System messages](https://openai.com/research/gpt-4)”（Steerability: Socratic tutor），可以让GPT-4按照用户要求的风格，与用户交互。
 
 
 
 
 其实这些LLM本身就是个黑盒，包括设计、训练这些LLM的人也不知道模型内部到底在干什么。
-以至于GPT3的论文中都指出，由于模型太大、数据量太多，他们（OpenAI）也不知道，模型到底是记住了那些数据，还是真的学到了客观规律。
-综上所述，想用好这些LM也是需要一定的研究、学习门槛的，而这些知识也可能在未来，成为个人的竞争优势。
+<br />以至于GPT3的论文中都指出，由于模型太大、数据量太多，他们（OpenAI）也不知道，模型到底是记住了那些数据，还是真的学到了客观规律。
+<br />综上所述，想用好这些LM也是需要一定的研究、学习门槛的，而这些知识也可能在未来，成为个人的竞争优势。
 
 ## 尾巴
 最后，让我们用一个小故事来结束这篇文章。
