--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -396,7 +396,8 @@ dB1=dZ1 \tag{12}
 
 ## **观察与思考**
 接下来，我再蹭一下风头正劲的LLM（大语言模型）的热度。
-<br />就在上个月，OpenAI发布了GPT-4。
+
+就在上个月，OpenAI发布了GPT-4。
 <br />正如[GPT-4的论文](https://arxiv.org/pdf/2303.08774.pdf)（技术报告）中提到的，GPT-4已经可以通过律师资格证考试，而且还超过了90%的考生，刷榜了大多数偏文科考试。
 <br />还有人用GPT-4测试，通过了Google、微软等各大公司的面试。
 <br />GPT-4还能帮人做游戏、3D建模、做投资等等，总之就是强的令人发指！
