--- a/详解前向计算、反向传播.md
+++ b/详解前向计算、反向传播.md
@@ -445,7 +445,7 @@ dB1=dZ1 \tag{12}
 
 
 
-其实这些LLM本身就是个黑盒，包括设计、训练这些LLM的人也不知道模型内部到底在干什么。
+<br />其实这些LLM本身就是个黑盒，包括设计、训练这些LLM的人也不知道模型内部到底在干什么。
 <br />以至于GPT3的论文中都指出，由于模型太大、数据量太多，他们（OpenAI）也不知道，模型到底是记住了那些数据，还是真的学到了客观规律。
 <br />综上所述，想用好这些LM也是需要一定的研究、学习门槛的，而这些知识也可能在未来，成为个人的竞争优势。
 
